# onet_role_dna

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMPLETENESS_AUDIT_v2.md  CONTRIBUTING.md  DATA_QUALITY_REPORT_UPDATED.md  FEATURE_ENGINEERING_RECOMMENDATIONS.md  LICENSE  RATINGS_AND_METRICS_AUDIT.md  README.md  SECURITY.md  analyze_profiles.py  company_occupation_mapping.csv  convert_to_all_formats.py  fetch_full_profiles.py  full_profiles.jsonl  integrate_employment_history.py  justfile  profiles.arrow  profiles.csv  profiles.msgpack  profiles_llm_instructions.jsonl  pyproject.toml  variance_analysis_report.txt  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml  validate-data.yml
CHANGELOG/: 0.1.0.md
data/: career_dna_trajectory.md  employment_history.csv  expanded_profiles_with_employment.csv  full_profiles_41-3091_v2.jsonl  onet_company-occupation-mapping_2026-06-01_v0.1.0_b89bc97d.csv.meta.json  onet_employment-history_2026-06-01_v0.1.0_f291e005.csv.meta.json  onet_expanded-profiles-with-employment_2026-06-01_v0.1.0_a2c48b1b.csv.meta.json  onet_full-profiles-41-3091-corrected_2026-06-01_v0.1.0_85e6a9d8.jsonl.meta.json  onet_full-profiles-41-3091-v2_2026-06-01_v0.1.0_85e6a9d8.jsonl.meta.json  onet_full-profiles_2026-06-01_v0.1.0_0ead18ed.jsonl.meta.json  onet_full-profiles_2026-06-06_v0.1.0_b887d5e3.jsonl  onet_full-profiles_2026-06-06_v0.1.0_b887d5e3.jsonl.meta.json  onet_profile-comparison-enhanced_2026-06-01_v0.1.0_9f666e6a.csv.meta.json  onet_profiles-enhanced_2026-06-01_v0.1.0_1d503fbe.csv.meta.json  onet_profiles-llm-instructions_2026-06-01_v0.1.0_a6f22ae7.jsonl.meta.json  onet_profiles-with-employment-summary_2026-06-01_v0.1.0_f7e078e0.csv  onet_profiles-with-employment-summary_2026-06-01_v0.1.0_f7e078e0.csv.meta.json  onet_profiles_2026-06-01_v0.1.0_0986c7ff.msgpack.meta.json  onet_profiles_2026-06-01_v0.1.0_49f3dbb5.arrow.meta.json  onet_profiles_2026-06-01_v0.1.0_7a3f00bc.jsonl  onet_profiles_2026-06-01_v0.1.0_7a3f00bc.jsonl.meta.json  onet_profiles_2026-06-01_v0.1.0_8a531253.parquet  onet_profiles_2026-06-01_v0.1.0_8a531253.parquet.meta.json  onet_profiles_2026-06-01_v0.1.0_a72ecc9b.db  onet_profiles_2026-06-01_v0.1.0_a72ecc9b.db.meta.json  onet_profiles_2026-06-01_v0.1.0_e65729dd.csv.meta.json  profile_comparison_enhanced.csv  profiles_enhanced.csv  step1_codes_2026-06-09.json  step2_raw_11-1021.00.json  step2_raw_11-3031.00.json  step2_raw_13-2072.00.json  step2_raw_15-2031.00.json  step2_raw_41-3091.00.json  step3_clean_11-1021.00.json  step3_clean_11-3031.00.json  step3_clean_13-2072.00.json  step3_clean_15-2031.00.json  step3_clean_41-3091.00.json  step4_normal_11-1021.00.json  (+15 more)
docs/: DATA_QUALITY_REPORT.md  DQR_REGRESSION_TEST_v4.1.md  api.md  index.md  installation.md  usage.md
hf_occupations/: data-00000-of-00001.arrow  dataset_info.json  state.json
scripts/: OnetWebService.py  analyze_detailed.py  analyze_profiles.py  audit_clean_data.py  audit_normal_data.py  audit_vector_data.py  build_career_trajectory.py  build_human_readable.py  clean_raw_data.py  combine_profiles.py  enhance_profiles_with_recommendations.py  fetch.py  fetch_full_profiles.py  fetch_raw_data.py  migrate_legacy_data.py  normalize_data.py  save_codes.py  test_data_dictionary.py  vectorize_data.py  workspace_status.py
src/onet_role_dna/: __init__.py  cli.py  hashing.py  schema.py  utils.py  validator.py  writer.py
tests/: test_onet_role_dna.py
