[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onet_role_dna"
version = "0.1.0"
description = "A Python package for analyzing and modeling occupational role DNA from O*NET data."
readme = "README.md"
authors = [
  {name = "Andy Eick", email = "andy.eick@gmail.com"}
]
maintainers = [
  {name = "Andy Eick", email = "andy.eick@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "tqdm",
  "pandas>=3.0.3",
  "numpy>=2.4.6",
  "scikit-learn>=1.9.0",
  "polars>=1.41.2",
  "narwhals>=2.22.1",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
    "ipython>=9.14.1",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "ty>=0.0.44",
    "types-setuptools>=82.0.0.20260518",
    "types-tqdm>=4.67.3.20260518",
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/olwordeaux/onet_role_dna/issues"
changelog = "https://github.com/olwordeaux/onet_role_dna/releases"
documentation = "https://olwordeaux.github.io/onet_role_dna/"
homepage = "https://github.com/olwordeaux/onet_role_dna"

[project.scripts]
onet_role_dna = "onet_role_dna.cli:app"

[project.optional-dependencies]
pandas = [
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "T20", # flake8-print
    "BLE", # flake8-blind-except
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow print statements in developer CLI utilities and standalone test execution files
"src/onet_role_dna/validator.py" = ["T201", "BLE001"]
"src/onet_role_dna/hashing.py" = ["T201"]
"src/onet_role_dna/writer.py" = ["T201"]
"scripts/workspace_status.py" = ["T201", "BLE001"]
"src/onet_role_dna/schema.py" = ["T201", "BLE001"]
"scripts/test_data_dictionary.py" = ["T201", "BLE001"]
"scripts/fetch_raw_data.py" = ["T201", "BLE001"]
"scripts/clean_raw_data.py" = ["T201", "BLE001"]
"scripts/audit_clean_data.py" = ["T201", "BLE001"]
"scripts/audit_normal_data.py" = ["T201", "BLE001"]
"scripts/audit_vector_data.py" = ["T201", "BLE001"]
"scripts/combine_profiles.py" = ["T201", "BLE001"]
"scripts/normalize_data.py" = ["T201", "BLE001"]
"scripts/build_human_readable.py" = ["T201", "BLE001"]
"scripts/build_career_trajectory.py" = ["T201", "BLE001"]
"scripts/vectorize_data.py" = ["T201", "BLE001"]
"scripts/save_codes.py" = ["T201"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
